Bug 82602 - [SNB/BYT/BSW Regression]igt/kms_cursor_crc/cursor-256-sliding sporadically causes *ERROR* spurious interrupt
Summary: [SNB/BYT/BSW Regression]igt/kms_cursor_crc/cursor-256-sliding sporadically ca...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: highest normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 85783 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-08-14 08:11 UTC by Guo Jinxian
Modified: 2017-02-10 08:55 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (125.64 KB, text/plain)
2014-08-14 08:11 UTC, Guo Jinxian
no flags Details

Description Guo Jinxian 2014-08-14 08:11:21 UTC
Created attachment 104607 [details]
dmesg

==System Environment==
--------------------------
Regression: Yes.
Only failed on -nihgtly branch. good commit on -nihgtly(79e44bfa10063ee529140e88fdc401c4ce07d644)

Non-working platforms: SNB

==kernel==
--------------------------
origin/drm-intel-nightly: da31e7c60be217316278a055dd3f91c33913270f(fails)
    drm-intel-nightly: 2014y-08m-13d-17h-12m-37s integration manifest
origin/drm-intel-next-queued: 82e3b8c130f046b7dd1e7898c10e40edb52fee6d(works)
    drm/i915: Localise the fbdev console lock frobbing  
origin/drm-intel-fixes: 7613ec9e6b40b1651d0b8d4af85517ae81110900(works)
    drm/i915: Skip load detect when intel_crtc->new_enable==true
origin/drm-fixes: 1b2c4869d8247f9e202fa8a73777c34adc62d409(works)
    drm/radeon: fix cut and paste issue for hawaii.
origin/drm-intel-fixes: 7963e9db1b1f842fdc53309baa8714d38e9f5681(works)
    Revert "drm: drop redundant drm_file->is_master"

==Bug detailed description==
-----------------------------
igt/kms_cursor_crc/cursor-256-sliding causes "[drm:display_pipe_crc_irq_handler] *ERROR* spurious interrupt"

Output:
[root@x-sgb4 tests]# ./kms_cursor_crc --run-subtest cursor-256-sliding
IGT-Version: 1.7-g5c7bcb1 (i686) (Linux: 3.16.0_drm-intel-nightly_da31e7_20140814+ i686)
Beginning cursor-256-sliding on pipe A, connector VGA-1
................................................
cursor-256-sliding on pipe A, connector VGA-1: PASSED

Beginning cursor-256-sliding on pipe B, connector VGA-1
................................................
cursor-256-sliding on pipe B, connector VGA-1: PASSED

Beginning cursor-256-sliding on pipe A, connector DP-1
................................................
cursor-256-sliding on pipe A, connector DP-1: PASSED

Beginning cursor-256-sliding on pipe B, connector DP-1
..........Test assertion failure function do_single_test, file kms_cursor_crc.c:123:
Failed assertion: igt_crc_equal(&crc, &ref_crc)
Subtest cursor-256-sliding: FAIL
[root@x-sgb4 tests]# dmesg -r|egrep ""<[1-4]>""|grep drm
<3>[    0.000000] [drm:display_pipe_crc_irq_handler] *ERROR* spurious interrupt
<3>[    0.000000] [drm:display_pipe_crc_irq_handler] *ERROR* spurious interrupt
<3>[    0.000000] [drm:display_pipe_crc_irq_handler] *ERROR* spurious interrupt
<3>[    0.000000] [drm:display_pipe_crc_irq_handler] *ERROR* spurious interrupt
<3>[    0.000000] [drm:display_pipe_crc_irq_handler] *ERROR* spurious interrupt
<3>[    0.000000] [drm:display_pipe_crc_irq_handler] *ERROR* spurious interrupt
<3>[    0.000000] [drm:display_pipe_crc_irq_handler] *ERROR* spurious interrupt
<3>[    0.000000] [drm:display_pipe_crc_irq_handler] *ERROR* spurious interrupt
<3>[    0.000000] [drm:display_pipe_crc_irq_handler] *ERROR* spurious interrupt
<3>[    0.000000] [drm:display_pipe_crc_irq_handler] *ERROR* spurious interrupt


Reproduce steps:
-------------------------
1. ./kms_cursor_crc --run-subtest cursor-256-sliding
Comment 1 Guo Jinxian 2014-09-05 05:24:06 UTC
Test failed on BSW on latest -nightly(8741309e3741a64c1f83ac1f0b8144452bb83441), but the dmesg error unable to reproduce.


[root@x-bsw01 tests]# ./kms_cursor_crc --run-subtest cursor-64-random
IGT-Version: 1.7-g0818875 (x86_64) (Linux: 3.17.0-rc2_drm-intel-nightly_874130_20140905+ x86_64)
Beginning cursor-64-random on pipe A, connector eDP-1
..................Test assertion failure function do_single_test, file kms_cursor_crc.c:123:
Failed assertion: igt_crc_equal(&crc, &ref_crc)
Subtest cursor-64-random: FAIL
[root@x-bsw01 tests]# dmesg -r|egrep "<[1-4]>"|grep drm
[root@x-bsw01 tests]#
Comment 2 Guo Jinxian 2014-09-16 07:40:35 UTC
Cases below also have this failure.

igt/kms_cursor_crc/cursor-128-offscreen
igt/kms_cursor_crc/cursor-128-onscreen
igt/kms_cursor_crc/cursor-128-random
igt/kms_cursor_crc/cursor-256-random
igt/kms_cursor_crc/cursor-64-offscreen
igt/kms_cursor_crc/cursor-64-onscreen
igt/kms_cursor_crc/cursor-64-random
igt/kms_cursor_crc/cursor-64-sliding


[root@x-bsw01 tests]# ./kms_cursor_crc --run-subtest cursor-128-offscreen
IGT-Version: 1.8-g137877f (x86_64) (Linux: 3.17.0-rc4_drm-intel-nightly_43df30_20140916+ x86_64)
Beginning cursor-128-offscreen on pipe A, connector eDP-1
..Test assertion failure function do_single_test, file kms_cursor_crc.c:123:
Failed assertion: igt_crc_equal(&crc, &ref_crc)
Subtest cursor-128-offscreen: FAIL (7.149s)
Comment 3 Guo Jinxian 2014-09-19 03:03:01 UTC
The failure is able to reproduce on latest -nightly(3e5e5913a80f593aa8f67784220eac2658034c6c) on BYT, but the dmesg error unable to reproduce.

root@x-bytm02:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# ./kms_cursor_crc --run-subtest cursor-256-onscreen
IGT-Version: 1.8-g5053446 (x86_64) (Linux: 3.17.0-rc5_drm-intel-nightly_3e5e59_20140918+ x86_64)
Beginning cursor-256-onscreen on pipe A, connector eDP-1
....................Test assertion failure function do_single_test, file kms_cursor_crc.c:123:
Failed assertion: igt_crc_equal(&crc, &ref_crc)
Subtest cursor-256-onscreen: FAIL (52.144s)
root@x-bytm02:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# dmesg -r|egrep "<[1-4]>"|grep drm                 root@x-bytm02:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests#
Comment 4 lu hua 2014-11-05 05:06:52 UTC
*** Bug 85783 has been marked as a duplicate of this bug. ***
Comment 5 lu hua 2014-11-05 05:07:02 UTC
Run kms_cursor_crc on SNB, it also has this error.
IGT-Version: 1.8-ge622850 (x86_64) (Linux: 3.18.0-rc3_drm-intel-nightly_f56717_20141105+ x86_64)
Beginning cursor-128x128-sliding on pipe A, connector LVDS-1
................................................
cursor-128x128-sliding on pipe A, connector LVDS-1: PASSED

Beginning cursor-128x128-sliding on pipe B, connector LVDS-1
................................................
cursor-128x128-sliding on pipe B, connector LVDS-1: PASSED

Subtest cursor-128x128-sliding: SUCCESS (20.903s)
[root@x-hnr9 tests]# dmesg -r|egrep "<[1-4]>"|grep drm
<3>[ 6485.566446] [drm:i9xx_pipe_crc_irq_handler [i915]] *ERROR* spurious interrupt
Comment 6 lu hua 2014-11-05 05:11:42 UTC
Run kms_rotation_crc_sprite-rotation on SNB, it also has this issue.
Comment 7 Daniel Vetter 2014-11-26 15:33:08 UTC
commit b459261a9577f90dbe44241c48f7a781d5128b31
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Wed Nov 26 16:29:04 2014 +0100

    drm/i915: Tune down spurious CRC interrupt warning
Comment 8 Guo Jinxian 2014-12-01 02:09:10 UTC
Verified on latest -nightly(0db9cf7742874ee2c09a35b640c1bb04cb379eb6)

[root@x-sgb4 tests]# ./kms_cursor_crc --run-subtest cursor-128x128-sliding
IGT-Version: 1.8-gb35b150 (i686) (Linux: 3.18.0-rc6_drm-intel-nightly_0db9cf_20141130+ i686)
Beginning cursor-128x128-sliding on pipe A, connector VGA-1
................................................
cursor-128x128-sliding on pipe A, connector VGA-1: PASSED

Beginning cursor-128x128-sliding on pipe B, connector VGA-1
................................................
cursor-128x128-sliding on pipe B, connector VGA-1: PASSED

Subtest cursor-128x128-sliding: SUCCESS (21.157s)
[root@x-sgb4 tests]# dmesg -r|egrep "<[1-4]>"|grep drm
[root@x-sgb4 tests]#
Comment 9 Jari Tahvanainen 2017-02-10 08:55:59 UTC
Closing (>2 years) old Verified+Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.